Fix index cards alignments

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -1,8 +1,9 @@
 .editor-wrap .form-control {
-  height: 40px;
-  width: 662px;
+  height: 35px;
+  width: 675px;
   margin-right: 10px;
 }
+
 
 .nav-link.gold-header {
   color: rgb(237,155,4) ;
